# mlops_project

./: .gitignore  README.md  adurino.c  app.py  arduino.c  cnn_model.py  log.txt  project_setup.ipynb  pyproject.toml  utils.py
federated_learning/: fed_example.py
